gccida/c0/peephole2_optimize
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:3530:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[i].live_before = bitmap_initialize( &rs_heads[i]); 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:3537:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[i].insn = 0LL; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:3538:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[4].insn = global_rtl[0]; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:3541:14: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
bitmap_copy( peep2_insn_data_0[4].live_before, live); 
             ^~~~~~~~~~~~~~~~~
             peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:3545:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
prev = ( rtx)insn[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:3550:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[peep2_current].insn = insn; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:3552:14: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
bitmap_copy( peep2_insn_data_0[peep2_current].live_before, live); 
             ^~~~~~~~~~~~~~~~~
             peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:3561:12: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
old_insn = peep2_insn_data_0[j].insn; 
           ^~~~~~~~~~~~~~~~~
           peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:3582:26: error: assigning to 'uint64' (aka 'unsigned long long') from incompatible type 'struct rtx_def'
*( _QWORD *)&new_insn[4] = old_insn[4]; 
                         ^ ~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:3583:63: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( note_0 = old_insn[3].fld[0].rtx; note_0; note_0 = ( rtx)note_0[1] ) 
                                                              ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:3588:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)note_0), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:3588:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)note_0), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:3597:37: error: use of undeclared identifier 'peep2_insn_data_0'
if ( ( unsigned __int16)*( _DWORD *)peep2_insn_data_0[ja].insn == 34 ) 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:3606:23: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
note = find_reg_note( peep2_insn_data_0[i].insn, REG_EH_REGION, 0LL); 
                      ^~~~~~~~~~~~~~~~~
                      peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:3607:31: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
trya = emit_insn_after( trya, peep2_insn_data_0[i].insn); 
                              ^~~~~~~~~~~~~~~~~
                              peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:3608:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
before_try = ( rtx)insn[1]; 
                   ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:3609:26: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
delete_insn_chain( insn, peep2_insn_data_0[i].insn); 
                         ^~~~~~~~~~~~~~~~~
                         peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:3614:44: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( x = trya; x != before_try; x = ( rtx)x[1] ) 
                                           ^~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:3645:20: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
bitmap_copy( live, peep2_insn_data_0[i].live_before); 
                   ^~~~~~~~~~~~~~~~~
                   peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_optimize/src/obj/recog.o] Error 1
